This is a commit 2

--- a/bestWebPageEver/index.html
+++ b/bestWebPageEver/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <h1> Hello Jose!  </h1>
-    <h2> I Love U </h2>>
+    <h2> I Love U </h2>
+    <h2> I Love U 2 </h2>
   </head>
 
 </html>
